--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../../Qurhealth/fhbCommon
+    path: ../myfhb-flutter-common
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
@@ -107,7 +107,8 @@ dependencies:
   contacts_service: ^0.6.1
   group_list_view: ^1.0.5
   advance_pdf_viewer: ^2.0.0
-  open_file: ^3.2.1
+  open_file:
+    path: ./open_file-master
   firebase_dynamic_links: ^2.0.7
   lottie: ^1.1.0
   flutter_logs: ^2.1.4
