--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../../Qurhealth/fhbCommon
+    path: ../common
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
@@ -43,7 +43,8 @@ dependencies:
   google_maps_flutter: ^2.0.6
   auto_size_text: ^2.1.0
   dio: ^4.0.0
-  flutter_sound: ^8.1.4
+  flutter_sound:
+    path : flutter_sound
 #  flutter_google_places: ^0.3.0
   geocoder: ^0.2.1
   geolocator: ^7.2.0+1
@@ -57,10 +58,11 @@ dependencies:
   flutter_absolute_path: ^1.0.6
   provider: ^5.0.0
   get: ^4.1.4
-  tflite: ^1.1.2
+#  tflite: ^1.1.2
   sqflite: ^2.0.0+3
   devicelocale: ^0.4.1
-  flutter_local_notifications: ^6.0.0
+  flutter_local_notifications:
+    path : flutter-local-notification
   random_color: ^1.0.5
   image_gallery_saver: ^1.5.0
   permission_handler: ^8.1.2
