--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,6 +114,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.google.android.gms:play-services-auth-api-phone:18.0.1"
+    // For Kotlin
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
