EFHB-6751 updated build.gradle and pubspec

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,9 +91,17 @@ android {
             universalApk true
         }
     }
-    sourceSets{
-        main{
-            jniLibs.srcDirs = ['libs']
+//    sourceSets{
+//        main{
+//            jniLibs.srcDirs = ['libs']
+//        }
+//    }
+
+    allprojects {
+        repositories {
+            flatDir {
+                dirs 'libs'
+            }
         }
     }
 
@@ -141,10 +149,12 @@ dependencies {
     implementation project(':ohq-reference-code')
     implementation project(':utility')
     implementation 'com.facebook.android:facebook-android-sdk:13.2.0'
-    implementation files('libs/BleDeviceManager.jar')
-    implementation files('libs/GSH601_Device.jar')
-    implementation files('libs/DB62M_Device.jar')
-    implementation files('libs/LS202_Device.jar')
+//    implementation files('libs/BleDeviceManager.jar')
+//    implementation files('libs/GSH601_Device.jar')
+//    implementation files('libs/DB62M_Device.jar')
+//    implementation files('libs/LS202_Device.jar')
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+
 
 }
 apply plugin: 'com.google.gms.google-services'
