--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -122,6 +122,7 @@ dependencies:
   html_unescape: ^2.0.0
   audioplayers: 0.20.1
   mime_type: ^1.0.0
+  pin_input_text_field: 4.1.1
 
 
 dev_dependencies:
