--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,4 @@ android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
 android.bundle.enableUncompressedNativeLibs=false
+android.jetifier.ignorelist=LS202_Device.jar
