EFHB-6751-latest updated gradle plugin

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,19 +91,19 @@ android {
             universalApk true
         }
     }
-//    sourceSets{
-//        main{
-//            jniLibs.srcDirs = ['libs']
-//        }
-//    }
-
-    allprojects {
-        repositories {
-            flatDir {
-                dirs 'libs'
-            }
+    sourceSets{
+        main{
+            jniLibs.srcDirs = ['libs']
         }
     }
+
+//    allprojects {
+//        repositories {
+//            flatDir {
+//                dirs 'libs'
+//            }
+//        }
+//    }
 
 
 }
@@ -149,11 +149,11 @@ dependencies {
     implementation project(':ohq-reference-code')
     implementation project(':utility')
     implementation 'com.facebook.android:facebook-android-sdk:13.2.0'
-//    implementation files('libs/BleDeviceManager.jar')
-//    implementation files('libs/GSH601_Device.jar')
-//    implementation files('libs/DB62M_Device.jar')
-//    implementation files('libs/LS202_Device.jar')
-    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation files('libs/BleDeviceManager.jar')
+    implementation files('libs/GSH601_Device.jar')
+    implementation files('libs/DB62M_Device.jar')
+    implementation files('libs/LS202_Device.jar')
+//    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
 
 }
