--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../commonNullSafety
+    path: ../commoncopy
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
@@ -46,6 +46,7 @@ dependencies:
   flutter_sound: ^8.1.4
 #  flutter_google_places: ^0.3.0
   # geocoder: ^0.2.1 FU2.5
+  flutter_geocoder: ^0.2.2-nullsafety
   geolocator: ^7.2.0+1
   uuid: ^3.0.4
   dotted_border: ^2.0.0
@@ -54,7 +55,10 @@ dependencies:
   image_picker: ^0.8.1+2
   carousel_slider: ^4.0.0
   multi_image_picker: ^4.7.10
-  # flutter_absolute_path: ^1.0.6 FU2.5
+  flutter_absolute_path:
+    path: ../flutter_absolute_path
+#  flutter_absolute_path: ^1.0.6
+#  lecle_flutter_absolute_path: ^0.0.2+1
   provider: ^5.0.0
   get: ^4.1.4
   tflite: ^1.1.2
@@ -76,6 +80,7 @@ dependencies:
   expandable: ^5.0.1
   fluttertoast: ^8.0.1
   # progress_dialog: ^1.2.4 FU2.5
+  progress_dialog_null_safe: ^1.0.7
   google_sign_in: ^5.0.4
   health: ^3.0.0
   quiver: ^3.0.1
@@ -109,6 +114,7 @@ dependencies:
   advance_pdf_viewer: ^2.0.0
 #  open_file:
 #    path: ./open_file-master
+  open_filex: ^3.4.0
   firebase_dynamic_links: ^2.0.7
   lottie: ^1.1.0
   flutter_logs: ^2.1.4
