--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../common
+    path: ../myfhb-flutter-common
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
@@ -92,7 +92,6 @@ dependencies:
   money_formatter: ^0.0.3
   url_launcher: ^6.0.7
   grouped_list: ^4.0.0
-  country_pickers: ^2.0.0
   youtube_player_flutter: ^8.0.0
   scrollable_positioned_list: ^0.1.8
   appsflyer_sdk: ^6.2.0+1
