--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   carousel_slider: ^4.0.0
   multi_image_picker: ^4.7.10
   flutter_absolute_path:
-    path: ../flutter_absolute_path
+    path: ./flutter_absolute_path
 #  flutter_absolute_path: ^1.0.6
 #  lecle_flutter_absolute_path: ^0.0.2+1
   provider: ^5.0.0
