--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../myfhb-flutter-common
+    path: ../common
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
@@ -102,7 +102,7 @@ dependencies:
   scroll_to_index: ^2.0.0
   flutter_inappwebview: ^5.3.2
   flutter_downloader: ^1.5.2
-  contacts_service: ^0.6.1
+#  contacts_service: ^0.6.1
   group_list_view: ^1.0.5
   advance_pdf_viewer: ^2.0.0
   open_file:
