--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../commonNullSafety
+    path: ../myfhb-flutter-common-nullsafety
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
@@ -99,7 +99,7 @@ dependencies:
   url_launcher: ^6.0.7
   grouped_list: ^4.0.0
   youtube_player_flutter: ^8.0.0
-  # scrollable_positioned_list: ^0.1.8 FU2.5
+  scrollable_positioned_list: ^0.2.2
   appsflyer_sdk: ^6.2.0+1
   package_info: ^2.0.2
   firebase_remote_config: ^0.10.0+2
