EFHB-6630 Master-into-flutter-upgrade-chat-not-working-release

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -124,7 +124,7 @@ dependencies:
   infinite_scroll_pagination: ^3.1.0
   flutter_localizations:
     sdk: flutter
-  socket_io_client: ^2.0.0-beta.4-nullsafety.0
+  socket_io_client: ^2.0.0
   facebook_app_events: ^0.16.0
   html_unescape: ^2.0.0
   audioplayers: 0.20.1
