--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../myfhb-flutter-common
+    path: ../common
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
@@ -123,6 +123,8 @@ dependencies:
   audioplayers: 0.20.1
   mime_type: ^1.0.0
   pin_input_text_field: 4.1.1
+  table_calendar: 3.0.1
+
   # local_auth: ^1.1.7
   
 
