--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,7 +6,7 @@ linter:
     - avoid_returning_null_for_future
     - avoid_slow_async_io
     - avoid_types_as_parameter_names
-    - avoid_web_libraries_in_flutter (experimental)
+    - avoid_web_libraries_in_flutter
     - cancel_subscriptions
     - close_sinks
     - comment_references
@@ -14,7 +14,6 @@ linter:
     - diagnostic_describe_all_properties
     - empty_statements
     - hash_and_equals
-    - invariant_booleans (experimental)
     - iterable_contains_unrelated_type
     - list_remove_unrelated_type
     - literal_only_boolean_expressions
@@ -34,7 +33,6 @@ linter:
     - always_put_control_body_on_new_line
     - always_put_required_named_parameters_first
     - always_require_non_null_named_parameters
-    - always_specify_types
     - annotate_overrides
     - avoid_annotating_with_dynamic
     - avoid_as
@@ -61,7 +59,6 @@ linter:
     - avoid_setters_without_getters
     - avoid_shadowing_type_parameters
     - avoid_single_cascade_in_expression_statements
-    - avoid_types_on_closure_parameters
     - avoid_unnecessary_containers
     - avoid_unused_constructor_parameters
     - avoid_void_async
@@ -95,7 +92,6 @@ linter:
     - prefer_adjacent_string_concatenation
     - prefer_asserts_in_initializer_lists
     - prefer_asserts_with_message
-    - prefer_bool_in_asserts (deprecated)
     - prefer_collection_literals
     - prefer_conditional_assignment
     - prefer_const_constructors
@@ -104,7 +100,6 @@ linter:
     - prefer_const_literals_to_create_immutables
     - prefer_constructors_over_static_methods
     - prefer_contains
-    - prefer_double_quotes
     - prefer_single_quotes
     - prefer_equal_for_default_values
     - prefer_expression_function_bodies
@@ -127,7 +122,6 @@ linter:
     - prefer_iterable_whereType
     - prefer_mixin
     - prefer_null_aware_operators
-    - prefer_single_quotes
     - prefer_spread_collections
     - prefer_typing_uninitialized_variables
     - provide_deprecation_message
@@ -137,16 +131,13 @@ linter:
     - sort_child_properties_last
     - sort_constructors_first
     - sort_unnamed_constructors_first
-    - super_goes_last (deprecated)
     - type_annotate_public_apis
     - type_init_formals
     - unawaited_futures
     - unnecessary_await_in_return
     - unnecessary_brace_in_string_interps
     - unnecessary_const
-    - unnecessary_final
     - unnecessary_getters_setters
-    - unnecessary_lambdas
     - unnecessary_new
     - unnecessary_null_aware_assignments
     - unnecessary_null_in_if_null_operators
@@ -162,165 +153,163 @@ linter:
     - use_to_and_as_if_applicable
     - void_checks
     - package_names
-    - abstract_super_member_reference
-    - ambiguous_extension_member_access
-    - ambiguous_import
-    - ambiguous_set_or_map_literal_both
-    - ambiguous_set_or_map_literal_either
-    - argument_type_not_assignable
-    - assignment_to_final
-    - assignment_to_final_local
-    - assignment_to_final_no_setter
-    - assignment_to_method
-    - built_in_identifier_as_extension_name
-    - built_in_identifier_as_type
-    - case_block_not_terminated
-    - cast_to_non_type
-    - concrete_class_with_abstract_member
-    - const_constructor_with_non_final_field
-    - const_initialized_with_non_constant_value
-    - const_instance_field
-    - const_not_initialized
-    - const_spread_expected_list_or_set
-    - const_spread_expected_map
-    - const_with_non_const
-    - const_with_non_constant_argument
-    - dead_code
-    - dead_code_catch_following_catch
-    - dead_code_on_catch_subtype
-    - deprecated_member_use
-    - deprecated_member_use_from_same_package
-    - duplicate_constructor
-    - duplicate_definition
-    - duplicate_import
-    - duplicate_named_argument
-    - equal_elements_in_const_set
-    - equal_keys_in_const_map
-    - expression_in_map
-    - extends_non_class
-    - extension_as_expression
-    - extension_conflicting_static_and_instance
-    - extension_declares_abstract_member
-    - extension_declares_constructor
-    - extension_declares_instance_field
-    - extension_declares_member_of_object
-    - extension_override_access_to_static_member
-    - extension_override_argument_not_assignable
-    - extension_override_without_access
-    - extension_override_with_cascade
-    - extra_positional_arguments
-    - extra_positional_arguments_could_be_named
-    - final_not_initialized
-    - final_not_initialized_constructor
-    - for_in_of_invalid_type
-    - implements_non_class
-    - implements_repeated
-    - implicit_this_reference_in_initializer
-    - initializer_for_non_existent_field
-    - initializing_formal_for_non_existent_field
-    - instance_access_to_static_member
-    - instance_member_access_from_factory
-    - instance_member_access_from_static
-    - instantiate_abstract_class
-    - invalid_assignment
-    - invalid_extension_argument_count
-    - invalid_factory_name_not_a_class
-    - invalid_literal_annotation
-    - invalid_override
-    - invalid_reference_to_this
-    - invalid_uri
-    - invalid_use_of_covariant_in_extension
-    - invalid_visibility_annotation
-    - invocation_of_extension_without_call
-    - invocation_of_non_function
-    - invocation_of_non_function_expression
-    - list_element_type_not_assignable
-    - map_entry_not_in_map
-    - map_key_type_not_assignable
-    - map_value_type_not_assignable
-    - missing_enum_constant_in_switch
-    - missing_required_param
-    - missing_return
-    - mixin_of_non_class
-    - mixin_on_sealed_class
-    - mixin_super_class_constraint_non_interface
-    - must_be_immutable
-    - must_call_super
-    - new_with_undefined_constructor_default
-    - non_abstract_class_inherits_abstract_member
-    - non_bool_condition
-    - non_bool_expression
-    - non_bool_negation_expression
-    - non_bool_operand
-    - non_constant_case_expression
-    - non_constant_default_value
-    - non_constant_list_element
-    - non_constant_map_element
-    - non_constant_map_key
-    - non_constant_map_value
-    - non_constant_set_element
-    - non_const_call_to_literal_constructor
-    - non_type_as_type_argument
-    - non_type_in_catch_clause
-    - not_a_type
-    - not_enough_positional_arguments
-    - not_iterable_spread
-    - not_map_spread
-    - no_annotation_constructor_arguments
-    - override_on_non_overriding_member
-    - part_of_non_part
-    - redirect_to_invalid_function_type
-    - redirect_to_invalid_return_type
-    - redirect_to_non_class
-    - referenced_before_declaration
-    - return_of_invalid_type
-    - return_of_invalid_type_from_closure
-    - return_without_value
-    - sdk_version_async_exported_from_core
-    - sdk_version_as_expression_in_const_context
-    - sdk_version_bool_operator_in_const_context
-    - sdk_version_eq_eq_operator_in_const_context
-    - sdk_version_extension_methods
-    - sdk_version_is_expression_in_const_context
-    - sdk_version_set_literal
-    - sdk_version_ui_as_code
-    - sdk_version_ui_as_code_in_const_context
-    - static_access_to_instance_member
-    - super_in_extension
-    - super_in_invalid_context
-    - type_argument_not_matching_bounds
-    - type_test_with_undefined_name
-    - undefined_annotation
-    - undefined_class
-    - undefined_constructor_in_initializer
-    - undefined_extension_getter
-    - undefined_extension_method
-    - undefined_extension_setter
-    - undefined_function
-    - undefined_getter
-    - undefined_hidden_name
-    - undefined_identifier
-    - undefined_method
-    - undefined_named_parameter
-    - undefined_operator
-    - undefined_prefixed_name
-    - undefined_setter
-    - undefined_shown_name
-    - undefined_super_method
-    - unnecessary_cast
-    - unqualified_reference_to_static_member_of_extended_type
-    - unused_catch_clause
-    - unused_catch_stack
-    - unused_element
-    - unused_field
-    - unused_import
-    - unused_label
-    - unused_local_variable
-    - unused_shown_name
-    - uri_does_not_exist
-    - uri_has_not_been_generated
-    - use_of_void_result
-    - variable_type_mismatch
-    - wrong_number_of_parameters_for_operator
-    - wrong_number_of_parameters_for_setter
-    - wrong_number_of_type_arguments
+    # - ambiguous_import
+    # - ambiguous_set_or_map_literal_both
+    # - ambiguous_set_or_map_literal_either
+    # - argument_type_not_assignable
+    # - assignment_to_final
+    # - assignment_to_final_local
+    # - assignment_to_final_no_setter
+    # - assignment_to_method
+    # - built_in_identifier_as_extension_name
+    # - built_in_identifier_as_type
+    # - case_block_not_terminated
+    # - cast_to_non_type
+    # - concrete_class_with_abstract_member
+    # - const_constructor_with_non_final_field
+    # - const_initialized_with_non_constant_value
+    # - const_instance_field
+    # - const_not_initialized
+    # - const_spread_expected_list_or_set
+    # - const_spread_expected_map
+    # - const_with_non_const
+    # - const_with_non_constant_argument
+    # - dead_code
+    # - dead_code_catch_following_catch
+    # - dead_code_on_catch_subtype
+    # - deprecated_member_use
+    # - deprecated_member_use_from_same_package
+    # - duplicate_constructor
+    # - duplicate_definition
+    # - duplicate_import
+    # - duplicate_named_argument
+    # - equal_elements_in_const_set
+    # - equal_keys_in_const_map
+    # - expression_in_map
+    # - extends_non_class
+    # - extension_as_expression
+    # - extension_conflicting_static_and_instance
+    # - extension_declares_abstract_member
+    # - extension_declares_constructor
+    # - extension_declares_instance_field
+    # - extension_declares_member_of_object
+    # - extension_override_access_to_static_member
+    # - extension_override_argument_not_assignable
+    # - extension_override_without_access
+    # - extension_override_with_cascade
+    # - extra_positional_arguments
+    # - extra_positional_arguments_could_be_named
+    # - final_not_initialized
+    # - final_not_initialized_constructor
+    # - for_in_of_invalid_type
+    # - implements_non_class
+    # - implements_repeated
+    # - implicit_this_reference_in_initializer
+    # - initializer_for_non_existent_field
+    # - initializing_formal_for_non_existent_field
+    # - instance_access_to_static_member
+    # - instance_member_access_from_factory
+    # - instance_member_access_from_static
+    # - instantiate_abstract_class
+    # - invalid_assignment
+    # - invalid_extension_argument_count
+    # - invalid_factory_name_not_a_class
+    # - invalid_literal_annotation
+    # - invalid_override
+    # - invalid_reference_to_this
+    # - invalid_uri
+    # - invalid_use_of_covariant_in_extension
+    # - invalid_visibility_annotation
+    # - invocation_of_extension_without_call
+    # - invocation_of_non_function
+    # - invocation_of_non_function_expression
+    # - list_element_type_not_assignable
+    # - map_entry_not_in_map
+    # - map_key_type_not_assignable
+    # - map_value_type_not_assignable
+    # - missing_enum_constant_in_switch
+    # - missing_required_param
+    # - missing_return
+    # - mixin_of_non_class
+    # - mixin_on_sealed_class
+    # - mixin_super_class_constraint_non_interface
+    # - must_be_immutable
+    # - must_call_super
+    # - new_with_undefined_constructor_default
+    # - non_abstract_class_inherits_abstract_member
+    # - non_bool_condition
+    # - non_bool_expression
+    # - non_bool_negation_expression
+    # - non_bool_operand
+    # - non_constant_case_expression
+    # - non_constant_default_value
+    # - non_constant_list_element
+    # - non_constant_map_element
+    # - non_constant_map_key
+    # - non_constant_map_value
+    # - non_constant_set_element
+    # - non_const_call_to_literal_constructor
+    # - non_type_as_type_argument
+    # - non_type_in_catch_clause
+    # - not_a_type
+    # - not_enough_positional_arguments
+    # - not_iterable_spread
+    # - not_map_spread
+    # - no_annotation_constructor_arguments
+    # - override_on_non_overriding_member
+    # - part_of_non_part
+    # - redirect_to_invalid_function_type
+    # - redirect_to_invalid_return_type
+    # - redirect_to_non_class
+    # - referenced_before_declaration
+    # - return_of_invalid_type
+    # - return_of_invalid_type_from_closure
+    # - return_without_value
+    # - sdk_version_async_exported_from_core
+    # - sdk_version_as_expression_in_const_context
+    # - sdk_version_bool_operator_in_const_context
+    # - sdk_version_eq_eq_operator_in_const_context
+    # - sdk_version_extension_methods
+    # - sdk_version_is_expression_in_const_context
+    # - sdk_version_set_literal
+    # - sdk_version_ui_as_code
+    # - sdk_version_ui_as_code_in_const_context
+    # - static_access_to_instance_member
+    # - super_in_extension
+    # - super_in_invalid_context
+    # - type_argument_not_matching_bounds
+    # - type_test_with_undefined_name
+    # - undefined_annotation
+    # - undefined_class
+    # - undefined_constructor_in_initializer
+    # - undefined_extension_getter
+    # - undefined_extension_method
+    # - undefined_extension_setter
+    # - undefined_function
+    # - undefined_getter
+    # - undefined_hidden_name
+    # - undefined_identifier
+    # - undefined_method
+    # - undefined_named_parameter
+    # - undefined_operator
+    # - undefined_prefixed_name
+    # - undefined_setter
+    # - undefined_shown_name
+    # - undefined_super_method
+    # - unnecessary_cast
+    # - unqualified_reference_to_static_member_of_extended_type
+    # - unused_catch_clause
+    # - unused_catch_stack
+    # - unused_element
+    # - unused_field
+    # - unused_import
+    # - unused_label
+    # - unused_local_variable
+    # - unused_shown_name
+    # - uri_does_not_exist
+    # - uri_has_not_been_generated
+    # - use_of_void_result
+    # - variable_type_mismatch
+    # - wrong_number_of_parameters_for_operator
+    # - wrong_number_of_parameters_for_setter
+    # - wrong_number_of_type_arguments
