--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -109,6 +109,7 @@
 		<string>audio</string>
 		<string>fetch</string>
 		<string>remote-notification</string>
+        <string>voip</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
 	<true/>
