--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,10 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../myfhb-flutter-common-nullsafety
+    path: ../../Qurhealth/fhbCommon
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
-  flutter_launcher_icons: ^0.9.0
-  font_awesome_flutter: ^9.1.0
   rxdart: ^0.27.1
   http: ^0.13.3
   intl: ^0.17.0
@@ -40,12 +38,9 @@ dependencies:
   shared_preferences: ^2.0.6
   avatar_glow: ^2.0.1
   google_maps_flutter: ^2.0.6
-  # auto_size_text: ^2.1.0 FU2.5
   auto_size_text: ^3.0.0
   dio: ^4.0.0
   flutter_sound: ^8.1.4
-#  flutter_google_places: ^0.3.0
-  # geocoder: ^0.2.1 FU2.5
   flutter_geocoder: ^0.2.2-nullsafety
   geolocator: ^7.2.0+1
   uuid: ^3.0.4
@@ -57,29 +52,19 @@ dependencies:
   multi_image_picker: ^4.7.10
   flutter_absolute_path:
     path: ./flutter_absolute_path
-#  flutter_absolute_path: ^1.0.6
-#  lecle_flutter_absolute_path: ^0.0.2+1
   provider: ^5.0.0
   get: ^4.1.4
-  tflite: ^1.1.2
   sqflite: ^2.0.0+3
   devicelocale: ^0.4.1
   flutter_local_notifications: ^6.0.0
-  # random_color: ^1.0.5 FU2.5
   image_gallery_saver: ^1.5.0
   permission_handler: ^8.1.2
   connectivity: ^3.0.6
   launch_review: ^3.0.1
-  intro_slider: ^3.0.2
-  photo_view: ^0.12.0 #^0.11.1
+  photo_view: ^0.12.0 
   file_picker: ^3.0.3
   showcaseview: ^1.1.0
-  # flashlight: ^0.1.1 FU2.5
-  image_cropper: ^1.2.1
-  # loading: ^1.0.2 FU2.5
   expandable: ^5.0.1
-  fluttertoast: ^8.0.1
-  # progress_dialog: ^1.2.4 FU2.5
   progress_dialog_null_safe: ^1.0.7
   google_sign_in: ^5.0.4
   health: ^3.0.0
@@ -90,17 +75,14 @@ dependencies:
   firebase_auth: ^1.4.1
   cloud_firestore: ^2.2.2
   firebase_storage: ^8.1.3
-  # device_id: ^0.2.0 FU2.5
   gallery_saver: ^2.0.1
   image_downloader: ^0.30.0
   flutter_typeahead: ^3.1.3
-  # screen: ^0.0.5 FU2.5
   money_formatter: ^0.0.3
   url_launcher: ^6.0.7
   grouped_list: ^4.0.0
   youtube_player_flutter: ^8.0.0
   scrollable_positioned_list: ^0.2.2
-  appsflyer_sdk: ^6.2.0+1
   package_info: ^2.0.2
   firebase_remote_config: ^0.10.0+2
   firebase_analytics: ^8.1.2
@@ -111,14 +93,11 @@ dependencies:
 #  contacts_service: ^0.6.1
   group_list_view: ^1.0.5
   advance_pdf_viewer: ^2.0.0
-#  open_file:
-#    path: ./open_file-master
   open_filex: ^3.4.0
   local_auth:
     path: ./local_auth
   firebase_dynamic_links: ^2.0.7
   lottie: ^1.1.0
-  flutter_logs: ^2.1.4
   sms_autofill: ^2.0.1
   syncfusion_flutter_datepicker: ^19.3.53
   infinite_scroll_pagination: ^3.1.0
@@ -131,12 +110,11 @@ dependencies:
   mime_type: ^1.0.0
   pin_input_text_field: 4.1.1
   table_calendar: 3.0.1
-
-  # local_auth: ^1.1.7
   flutter_spinkit: ^5.1.0
   
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.0
   flutter_test:
     sdk: flutter
 
@@ -157,17 +135,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/user/avatar.png
-    - assets/user/profile_pic_ph.png
     - assets/user/gold-member.png
     - assets/icons/
     - assets/Qurhome/Qurhome.png
     - assets/Qurhome/
-    - assets/launcher/myfhb.png
     - assets/navicons/
-    - assets/norecordfound.png
-    - assets/bg/family_bg.png
-    - assets/login_icon.png
     - assets/maya/
     - assets/settings/
     - assets/devices/
@@ -176,14 +148,12 @@ flutter:
     - assets/video/
     - assets/slide_icons/
     - assets/
-    - assets/launcher/qurplan.png
     - assets/IntroScreensImages/
     - assets/devices/
     - secrets.json
     - assets/payment/failure.png
     - assets/payment/success_tick.png
     - assets/launcher/myfhb.png
-    - assets/launcher/myfhb1.png
     - assets/dashboard/
     - assets/loading_wave.json
     - assets/languages/
