--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,9 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
+      if config.build_settings['WRAPPER_EXTENSION'] == 'bundle'
+       config.build_settings['DEVELOPMENT_TEAM'] = '4Y4H7RX8P9'
+      end
       config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
 #      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = "arm64"
       config.build_settings['ARCHS[sdk=iphonesimulator*]'] = 'x86_64'
