--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../../Qurhealth/fhbCommon
+    path: ../myfhb-flutter-common-nullsafety
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
@@ -145,8 +145,6 @@ flutter:
     - assets/devices/
     - assets/providers/
     - assets/help_docs/
-    - assets/video/
-    - assets/slide_icons/
     - assets/
     - assets/IntroScreensImages/
     - assets/devices/
