--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,7 +111,7 @@ dependencies:
   pin_input_text_field: 4.1.1
   table_calendar: 3.0.1
   flutter_spinkit: ^5.1.0
-  
+  badges: ^2.0.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
