--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,14 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('./devkey.jks')
+            storePassword 'devkey'
+            keyAlias 'devkey'
+            keyPassword 'devkey'
+        }
+    }
     compileSdkVersion 32
 
     sourceSets {
@@ -59,7 +67,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
 //            minifyEnabled true
 //            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
