--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../myfhb-flutter-common-nullsafety
+    git:
+      url: https://bitbucket.org/ventechgmi/myfhb-flutter-common
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
