--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    git:
-      url: https://bitbucket.org/ventechgmi/myfhb-flutter-common
+    path: ../myfhb-flutter-common-nullsafety
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^1.3.0
