--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,6 +48,14 @@
 				<string>com.googleusercontent.apps.588661578434-l1qvt7tl7de2hbqa5o8iqvak8tvmofkn</string>
 			</array>
 		</dict>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.69764989858-b2p2t37rgbprjajtk6m6pibehk7qg1rj</string>
+            </array>
+        </dict>
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
