--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -157,6 +157,8 @@ flutter:
     - assets/loading_wave.json
     - assets/languages/
     - assets/raw/dailer_tone.mp3
+    - assets/raw/ns_final.mp3
+
 
   #  - images/a_dot_ham.jpeg
 
