feature/EFHB-11547-mobile-apps-flutter-upgrade gradle issue fixed.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -171,8 +171,14 @@ dependencies {
 }
 apply plugin: 'com.google.gms.google-services'
 repositories {
-    maven { url 'http://maven.fabric.io/public' }
-    maven { url 'https://www.jitpack.io' }
+    maven {
+        url 'http://maven.fabric.io/public'
+        allowInsecureProtocol = true
+    }
+    maven {
+        url 'https://www.jitpack.io'
+        allowInsecureProtocol = true
+    }
     mavenCentral()
 
 }
