--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.7.20'
+    // Define the Kotlin version to be used in the build script
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         jcenter()
@@ -7,6 +8,7 @@ buildscript {
     }
 
     dependencies {
+        // Use the Android Gradle Plugin version 7.1.0
         classpath 'com.android.tools.build:gradle:7.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.14'
