--- a/local_auth/example/android/local.properties
+++ b/local_auth/example/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/qhnmaalap187/Library/Android/sdk
-flutter.sdk=/Users/qhnmaalap187/fvm/versions/3.10.0
+sdk.dir=/Users/venkateshc/Library/Android/sdk
+flutter.sdk=/Users/venkateshc/QurHealth/flutter
