--- a/local_auth/pubspec.yaml
+++ b/local_auth/pubspec.yaml
@@ -7,7 +7,7 @@ version: 1.1.7
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=3.10.0"
+  flutter: ">=3.13.5"
 
 flutter:
   plugin:
@@ -22,7 +22,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_plugin_android_lifecycle: ^2.0.1
-  intl: ^0.18.0
+  intl: 
   meta: ^1.3.0
   platform: ^3.0.0
 
