--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   badges: ^2.0.3
   flutter_timezone: ^1.0.8
+  speech_to_text: ^6.5.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
