--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   badges: ^2.0.3
   flutter_timezone: ^1.0.8
+
+  # The following line specifies the version of the speech_to_text package
   speech_to_text: ^6.5.1
 
 dev_dependencies:
