--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -119,6 +119,9 @@ dependencies:
   # The following line specifies the version of the speech_to_text package
   speech_to_text: ^6.5.1
 
+  # below plugin is used for video thumbnail showing in sheela media
+  video_thumbnail: ^0.5.3
+
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_test:
