--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ dependencies:
   firebase_dynamic_links: ^5.0.14
   lottie: ^1.1.0
   sms_autofill: ^2.0.1
+  #Import the Syncfusion Flutter Datepicker package with version 22.1.34
   syncfusion_flutter_datepicker: ^22.1.34
   infinite_scroll_pagination: ^3.1.0
   flutter_localizations:
