--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,9 @@ dependencies:
   # The following line specifies the version of the speech_to_text package
   speech_to_text: ^6.5.1
 
+  # The following line specifies the version of the cron package
+  cron: ^0.6.0
+
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_test:
