--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,9 @@ dependencies:
   badges: ^2.0.3
   flutter_timezone: ^1.0.8
 
+  #dropDown Button highly customizable
+  dropdown_button2: ^2.3.9
+
   # The following line specifies the version of the speech_to_text package
   speech_to_text: ^6.5.1
 
