--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,6 +125,7 @@ dependencies:
 
   # below plugin is used for video thumbnail showing in sheela media
   video_thumbnail: ^0.5.3
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
