--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../../qurhealth/fhbCommon
+    path: ../common_widget
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^2.13.1
@@ -108,6 +108,7 @@ dependencies:
   html_unescape: ^2.0.0
   #This Package used to navigate to device settings
   app_settings: ^4.1.6
+  timeago:
 
 
   audioplayers: 0.20.1
