--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   
   gmiwidgetspackage:
-    path: ../common_widget
+    path: ../../qurhealth/fhbCommon
 
   # The following adds the Cupertino Icons font to your application.
   firebase_core: ^2.13.1
