--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,7 @@ target 'Runner' do
   pod 'IQKeyboardManagerSwift'
   # Override Firebase SDK Version
   $FirebaseSDKVersion = '10.22.0'
+  pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '10.22.0'
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
